--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,10 +1,17 @@
+html {
+  overflow: hidden;
+  min-height: 100vh;
+}
 body {
-  margin: 0;
+  overflow: auto;
+  overscroll-behavior: none;
+  min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%) ;
 }
 
 code {
